[package]
name = "wasm"
version = "0.0.2"
authors = ["Nicolas Hatcher <nicolas@theuniverse.today>"]
description = "IronCalc Web bindings"
license = "MIT/Apache-2.0"
repository = "https://github.com/ironcalc/web-bindings"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Uses `../ironcalc/base` when used locally, and uses
# the inicated version from crates.io when published.
# https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html#multiple-locations
ironcalc_base = { path = "../ironcalc/base", version = "0.1.0" }
gloo-utils = { version = "0.2.0", features = ["serde"] }
js-sys = "0.3.65"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2.88"

[dev-dependencies]
wasm-bindgen-test = "0.3.38"

